Version 0.9.53   unreleased

    * Fix target URL for external application dashboard, so acceptance tests pass.

Version 0.9.52   17 Jul 2015

    * Bump up to CedarCommon v5.2.6 to get minor resource-leak bug fixes.
    * Bump up to CedarBuild v0.9.2 to get bug fixes for Cucucmber test runner.

Version 0.9.51   14 Jul 2015

    * Bump up to CedarBuild v0.9.2 to get improvements to Cucumber test runner.

Version 0.9.50   13 Jul 2015

    * Bump up to CedarCommon v5.2.5 and AppEngine v1.9.23 just to stay up-to-date.
    * Convert to Gradle 2 by upgrading to CedarBuild v0.9.1 (tested with Gradle v2.5).

Version 0.9.49   14 Jun 2015

    * Bump up to AppEngine v1.9.22 and CedarCommon v5.2.4 just to stay up-to-date.
    * Bump up to CedarBuild v0.8.17 to get Cucumber-related bug fix.
    * Make it possible to configure the specific path to Firefox for use by Selenium.
    * Configure Mercurial line endings in .hgeol and auto-convert files as necessary.

Version 0.9.48   09 Jun 2015

    * Add SantaExchangeStyles.NO_WRAP_STYLE and associated CSS in SantaExchange.css.
    * Add new unit test class RpcInterfaceTest to check that RPCs implement the proper interface.
    * Bump up to CedarBuild v0.8.16 to get Cucumber-related improvements.
    * Make the Cucumber headless test runner shutdown process more robust.
    * Pull out Ruby gem versions into cucumber.properties, to make Jenkins builds easier.

Version 0.9.47   18 Mar 2015

    * Fix tests that broke when I made the BitBucket homepage point at the wiki.

Version 0.9.46   17 Mar 2015

    * Bump up to AppEngine v1.9.18 just to stay up-to-date.
    * Bump up to CedarBuild v0.8.14 and CedarCommon v5.2.1.
    * Adjust build.gradle now that CedarCommon is distributed at Maven Central.
    * Other minor adjustments to code and docs now that projects is at BitBucket.

Version 0.9.45   01 Feb 2015

    * Convert from AppEngine's federated login mechanism to the Google Account login mechanism.